--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title></title>
 
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
-
     <link rel="stylesheet" href="dist/styles/main.css">
-
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet" type="text/css">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
